<resources>
    <string name="app_name">Inharmonia</string>
    <string name="title_activity_main">Inharmonia</string>
    <string name="title_home">Home</string>
    <string name="title_order">Pesanan</string>
    <string name="title_account">Akun</string>
    <string name="in_logo">Inharmonia Logo</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="status_icon">Status Icon</string>
    <string name="store_icon">Store Icon</string>
    <string name="buyer_icon">Buyer Icon</string>
    <string name="next_icon">Next Icon</string>
    <string name="menu_link_icon">Menu Link Icon</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="cari_sesuatu"><font size="15">Cari Sesuatu...</font></string>
    <string name="back_button">Back Button</string>
    <string name="clear_button">Clear Button</string>
    <string name="list_icon">List Icon</string>
    <string name="tempat_percetakan">Tempat Percetakan</string>
    <string name="disainer">Disainer</string>
    <string name="lainnya">Lainnya</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="detil_order">Detil Order</string>
    <string name="buat_pesanan">Buat Pesanan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="menu_image">Menu Image</string>
    <string name="logout_menu_link">Logout Menu Link</string>
    <string name="logout">Logout</string>
    <string name="search_hint"><font size="12">Cari Sesuatu...</font></string>
    <string name="pesanan">Pesanan</string>
    <string name="inharmonia_symbol">Inharmonia Symbol</string>
    <string name="end_separator">End Separator</string>
    <string name="search_icon">Search Icon</string>
    <string name="cart_button">Cart Button</string>
    <string name="account_cover">Account Cover</string>
    <string name="user_picture">User Picture</string>
    <string name="inharmonia_app">Inharmonia App</string>
    <string name="app_version">v.1.0</string>
    <string name="cetak_apa_aja_gak_pake_repot">Cetak apa aja gak pake repot!</string>
    <string name="no_content">No Content</string>
    <string name="tambahkan_ke_keranjang">Tambahkan Ke Keranjang</string>
    <string name="semua_layanan">Semua Layanan</string>
    <string name="berapa_banyak">Berapa banyak?</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="decrease_button">Decrease Button</string>
    <string name="increase_button">Increase Button</string>
    <string name="lanjut">Lanjut</string>
    <string name="store_cover">Store Cover</string>
    <string name="label_corner">Label Corner</string>
    <string name="konfirmasi_pesanan">Konfirmasi Pesanan</string>
    <string name="total">Total</string>
    <string name="close_button">Close Button</string>
    <string name="tambah">Tambah</string>
    <string name="moniprint_logo">MoniPrint Logo</string>
    <string name="keranjangku">Keranjangku</string>
    <string name="type_icon">Type Icon</string>
    <string name="dokumen">Dokumen</string>
    <string name="gambar">Gambar</string>
    <string name="pilih_semua">Pilih Semua</string>
    <string name="subtotal">SubTotal</string>
    <string name="checkout">Checkout</string>
    <string name="hapus">Hapus</string>
    <string name="q_hapus_dari_keranjang">Hapus dari keranjang?</string>
    <string name="pilih_lokasi_percetakan">Pilih Lokasi Percetakan</string>
    <string name="pilih_otomatis_percetakan">Pilih Otomatis Percetakan</string>
    <string name="filter_icon">Filter Icon</string>
    <string name="filter">Filter</string>
    <string name="terdekat">Terdekat</string>
    <string name="layout_switch">Layout Switch</string>
    <string name="sorting_icon">Sorting Icon</string>
    <string name="store_picture">Store Picture</string>
    <string name="location_icon">Location Icon</string>
    <string name="free_ongkir_icon">Free Ongkir Icon</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="pilih_otomatis">Pilih Otomatis</string>
    <string name="sign_icon">Sign Icon</string>
    <string name="lokasi">Lokasi</string>
    <string name="urut_berdasarkan">Urut berdasarkan</string>
    <string name="inbox">Inbox</string>
    <string name="monitrans_logo">MoniTrans Logo</string>
    <string name="q_perlu_apa_hari_ini">Perlu apa hari ini?</string>
    <string name="title_activity_store_finder_filter">Map</string>
    <string name="cari_lokasi">Cari lokasi...</string>
</resources>
