<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="130dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_item_type"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/in_blank_square"
                android:contentDescription="@string/menu_image" />

            <Button
                android:id="@+id/bt_button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah"
                android:fontFamily="@font/comfortaa_regular"
                android:background="@color/colorPurple"
                android:textColor="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/ll_quantity_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:padding="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ib_button_decrease"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/in_ic_minus"
                    android:padding="2dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/decrease_button"/>

                <EditText
                    android:id="@+id/et_number_value"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:digits="1234567890"
                    android:maxLength="4"
                    android:gravity="center_horizontal"
                    android:background="@color/colorWhite"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:textColorHint="@color/colorDarkGrey"
                    android:fontFamily="@font/comfortaa_regular"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="7pt" />

                <ImageButton
                    android:id="@+id/ib_button_increase"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/in_ic_plus"
                    android:padding="2dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/increase_button" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>