<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/cvMenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/in_blank_square"
                android:contentDescription="@string/menu_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibDecreaseButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/in_ic_minus"
                    android:padding="2dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/decrease_button"/>

                <EditText
                    android:id="@+id/etNumberValue"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:maxLines="1"
                    android:gravity="center_horizontal"
                    android:background="@color/colorWhite"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textStyle="bold"
                    android:textColorHint="@color/colorDarkGrey"
                    android:fontFamily="@font/comfortaa_regular"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="7pt" />

                <ImageButton
                    android:id="@+id/ibIncreaseButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/in_ic_plus"
                    android:padding="2dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:clickable="true"
                    android:focusable="true"
                    android:contentDescription="@string/increase_button" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>