<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Search.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="top"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivBackButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/in_ic_back"
                        android:contentDescription="@string/back_button" />

                    <EditText
                        android:id="@+id/etSearchInput"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:inputType="text"
                        android:hint="@string/search_hint"
                        android:textColorHint="@color/colorGrey"
                        android:background="@color/colorWhite"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/ivClearButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/in_ic_close"
                    android:visibility="invisible"
                    android:contentDescription="@string/clear_button"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorWhite">

                <ListView
                    android:id="@+id/lvKeywordList"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@color/colorWhite" />

                <TextView
                    android:id="@+id/tvKeywordListMore"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/lainnya" />

                <RelativeLayout
                    android:id="@+id/rlListTitleStore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvListTitleStore"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="@color/colorDarkGrey"
                        android:text="@string/tempat_percetakan" />

                    <TextView
                        android:id="@+id/tvStoreListMore"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/lainnya"
                        android:textColor="@color/colorPrimaryDark"
                        android:gravity="center_vertical"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

                <ListView
                    android:id="@+id/lvStoreList"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@color/colorWhite" />

                <RelativeLayout
                    android:id="@+id/rlListTitleDesigner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvListTitleDesigner"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="@color/colorDarkGrey"
                        android:text="@string/disainer" />

                    <TextView
                        android:id="@+id/tvDesignerListMore"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/lainnya"
                        android:textColor="@color/colorPrimaryDark"
                        android:gravity="center_vertical"
                        android:layout_alignParentEnd="true" />

                </RelativeLayout>

                <ListView
                    android:id="@+id/lvDesignerList"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:background="@color/colorWhite" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>