<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Search.SearchStoreActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="top"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            app:cardCornerRadius="0dp"
            app:cardElevation="2dp"
            app:cardUseCompatPadding="false">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivBackButton"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/in_ic_back"
                        android:contentDescription="@string/back_button" />

                    <EditText
                        android:id="@+id/etSearchInput"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:inputType="text"
                        android:hint="@string/search_hint"
                        android:textColorHint="@color/colorGrey"
                        android:background="@color/colorWhite"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/ivClearButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/in_ic_close"
                    android:visibility="invisible"
                    android:contentDescription="@string/clear_button"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <ListView
            android:id="@+id/lvStoreList"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorWhite" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>