<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="7dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="100dp"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_store_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/in_blank_square"
                    android:contentDescription="@string/store_picture" />

            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_store_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/harabara_mais"
                        android:textColor="@color/colorDarkGrey"
                        android:textSize="6pt"
                        android:text="" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:src="@drawable/in_ic_location"
                            android:tint="@color/colorSemiDarkGrey"
                            android:contentDescription="@string/location_icon" />

                        <TextView
                            android:id="@+id/tv_store_location"
                            android:layout_width="wrap_content"
                            android:layout_height="15dp"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:textSize="5pt"
                            android:fontFamily="@font/comfortaa_bold"
                            android:textColor="@color/colorSemiDarkGrey"
                            android:layout_marginStart="2dp"
                            android:text=""/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/comfortaa_regular"
                        android:textAlignment="center"
                        android:gravity="center_vertical"
                        android:textSize="6pt"
                        android:textColor="@color/colorPurple" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_free_ongkir"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:visibility="invisible"
                        android:src="@drawable/in_ic_free_shipping"
                        android:layout_alignParentStart="true"
                        android:contentDescription="@string/free_ongkir_icon"/>

                    <ImageView
                        android:id="@+id/iv_button_favorite"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/in_ic_heart_off"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/favorite_button" />

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>