<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Store.StoreFinderActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp"
            android:background="@color/colorLightGrey"
            android:gravity="top"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="0dp"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/ib_button_back"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/in_ic_back"
                            android:padding="2dp"
                            android:background="?android:attr/selectableItemBackgroundBorderless"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:clickable="true"
                            android:focusable="true"
                            android:contentDescription="@string/back_button" />

                        <TextView
                            android:id="@+id/tv_page_name"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:fontFamily="@font/comfortaa_bold"
                            android:background="@color/colorWhite"
                            android:textColor="@color/colorDarkGrey"
                            android:layout_marginStart="10dp"
                            android:text="@string/pilih_lokasi_percetakan"/>

                    </LinearLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="top"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cv_button_auto_store_finder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp"
                app:cardBackgroundColor="@color/colorLightPurple"
                android:foreground="?android:attr/selectableItemBackground"
                android:focusable="true"
                android:clickable="true"
                app:cardUseCompatPadding="false">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/pilih_otomatis_percetakan"
                    android:fontFamily="@font/comfortaa_regular"
                    android:textAlignment="center"
                    android:gravity="center_vertical"
                    android:textSize="7pt"
                    android:textColor="@color/colorWhite" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>